force-app/main/default/objects/ucinn_ascendv2__Package_Extension__mdt/ucinn_ascendv2__Package_Extension__mdt.object-meta.xml
<CustomObject>
    <description>Allows for override of certain classes.</description>
    <label>Package Extension</label>
    <pluralLabel>Package Extensions</pluralLabel>
</CustomObject>