force-app/main/default/objects/ucinn_ascendv2__Package_Extension__mdt/fields/ucinn_ascendv2__Base_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Base_Class_Name__c</fullName>
    <description>Base class to be overridden.</description>
    <inlineHelpText>Base class to be overridden.</inlineHelpText>
    <label>Base Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>