force-app/main/default/objects/ucinn_ascendv2__Package_Extension__mdt/fields/ucinn_ascendv2__Override_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Override_Class_Name__c</fullName>
    <description>Class that will override the base class.</description>
    <inlineHelpText>Class that will override the base class.</inlineHelpText>
    <label>Override Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>