force-app/main/default/objects/ucinn_ascendv2__Package_Extension__mdt/fields/ucinn_ascendv2__Override_Class_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Override_Class_Namespace__c</fullName>
    <description>Namespace of class that will override the base class.</description>
    <inlineHelpText>Namespace of class that will override the base class.</inlineHelpText>
    <label>Override Class Namespace</label>
    <length>25</length>
    <type>Text</type>
</CustomField>